--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {{% if title %}}
+    {% if title%}
     <title>{{title}}-FLASK</title>
-    {{% else %}}
+    {% else %}
     <title>welcome to FLASK</title>
-    {{% endif %}}
+    {% endif %}
 </head>
 <body>
 <h1>{{post.username}}</h1>
