--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,19 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
     {% if title %}
-    <title>{{title}}-FLASK</title>
+    <title>{{title}} - microblog</title>
     {% else %}
-    <title>FLASK</title>
+    <title>microblog</title>
     {% endif %}
-</head>
-<body>
-<div>MICROBlog: <a href="/index">HOME</a></div>
-
-<hr>
-{% block content %}
-{% endblock %}
-
-</body>
+  </head>
+  <body>
+    <div>Microblog: <a href="/index">Home</a></div>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+    {% for message in messages %}
+        <li>{{ message }} </li>
+    {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}{% endblock %}
+  </body>
 </html>
